Fix header section alignment

--- a/assets/css/block.css
+++ b/assets/css/block.css
@@ -213,12 +213,15 @@ body.coreCSB .bordercolorb6a533a1 {
 /* job detail page */
 
 .job-page #innershell {
-	padding-top: 100px;
 	padding-bottom: 0;
 }
 
 .job-page #content {
 	padding-bottom: 100px;
+}
+
+.job-page .jobDisplay {
+	padding-top: 100px;
 }
 
 .job-page div > b {
